--- a/agen/agen.css
+++ b/agen/agen.css
@@ -8,6 +8,10 @@
 body {
   background-color: #0f1923;
   color: white;
+  overflow-x: hidden;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 /* Navbar */
